K8S/musics-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicnpservice-srv
spec:
  type: NodePort
  selector:
    app: musicservice
  ports:
    - name: musicservice
      protocol: TCP
      port: 80
      targetPort: 80
